log
Thu 14 Sep 2023 12:06:52 AM UTC: 
 tests:  1|8
total_score: 0/70
b0a30ef
Thu 14 Sep 2023 02:01:55 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: unknown type name ‘treeMap’; did you mean ‘TreeMap’?
   40 |   treeMap* mapa = (treeMap)malloc(sizeof(treeMap));
      |   ^~~~~~~
      |   TreeMap
treemap.c:40:20: error: ‘treeMap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |   treeMap* mapa = (treeMap)malloc(sizeof(treeMap));
      |                    ^~~~~~~
      |                    TreeMap
treemap.c:40:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:40:28: error: expected ‘,’ or ‘;’ before ‘malloc’
   40 |   treeMap* mapa = (treeMap)malloc(sizeof(treeMap));
      |                            ^~~~~~
treemap.c:41:7: error: request for member ‘root’ in something not a structure or union
   41 |   mapa->root = NULL;
      |       ^~
treemap.c:42:7: error: request for member ‘current’ in something not a structure or union
   42 |   mapa->current = NULL;
      |       ^~
treemap.c:43:7: error: request for member ‘lower_than’ in something not a structure or union
   43 |   mapa->lower_than = NULL;
      |       ^~
Compilation failed
a3f0969
Thu 14 Sep 2023 02:02:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap* mapa = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
Compilation failed
47d7998
Thu 14 Sep 2023 02:02:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
03e56d7
Thu 14 Sep 2023 02:02:57 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
6f97ed4
Thu 14 Sep 2023 02:03:18 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8f6bcd4
Thu 14 Sep 2023 02:03:28 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
3ea653b
Thu 14 Sep 2023 02:08:19 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:23: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘int (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   75 |   TreeNode* current = tree->lower_than
      |                       ^~~~
treemap.c:76:3: error: expected ‘,’ or ‘;’ before ‘while’
   76 |   while(current == NULL){
      |   ^~~~~
treemap.c:75:13: error: unused variable ‘current’ [-Werror=unused-variable]
   75 |   TreeNode* current = tree->lower_than
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ef040c
